feat: next texts

--- a/source/index.html
+++ b/source/index.html
@@ -6,15 +6,15 @@
 
 @@include('blocks/about.htm')
 
-@@include('blocks/feature.htm')
+@@include('blocks/call-to-action.htm')
+
+<!--@@include('blocks/feature.htm')-->
 
 @@include('blocks/service.htm')
 
-@@include('blocks/call-to-action.htm')
 
 @@include('blocks/testimonial.htm')
 
 @@include('blocks/footer.htm')
 
 @@include('footer.htm')
-   
