--- a/theme/blog-right-sidebar.html
+++ b/theme/blog-right-sidebar.html
@@ -53,7 +53,7 @@
 			<div class="col-lg-12">
 				<nav class="navbar navbar-expand-lg p-0">
 					<a class="navbar-brand" href="index.html">
-						<img src="images/logo.png" alt="Logo">
+						<img src="images/dbs-logo.png" alt="Logo">
 					</a>
 
 					<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarsExample09" aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
@@ -123,6 +123,7 @@
 		</div>
 	</div>
 </header><!-- header close -->
+
 
 <section class="page-title bg-2">
   <div class="container">
