--- a/theme/index.html
+++ b/theme/index.html
@@ -53,7 +53,7 @@
 			<div class="col-lg-12">
 				<nav class="navbar navbar-expand-lg p-0">
 					<a class="navbar-brand" href="index.html">
-						<img src="images/logo.png" alt="Logo">
+						<img src="images/dbs-logo.png" alt="Logo">
 					</a>
 
 					<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarsExample09" aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
@@ -124,22 +124,21 @@
 	</div>
 </header><!-- header close -->
 
+
 <!-- Slider Start -->
 <section class="slider">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12">
-				<div class="block">
-					<h1 class="animated fadeInUp">Willkommen bei der Deutschen Bildungsstiftung
-</h1>
-					<p class="animated fadeInUp">Förderung der Bildung in ganz Deutschland durch kollaborativen Vermögensaufbau und transparente Fondsverwaltung.
-
-					</p>
-					<a href="https://themefisher.com/free-bootstrap-templates/" class="btn btn-main animated fadeInUp" >Free Bootstrap Templates</a>
-				</div>
-			</div>
-		</div>
-	</div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="block">
+                    <h1 class="animated fadeInUp">Willkommen bei der Deutschen Bildungsstiftung
+                    </h1>
+                    <p class="animated fadeInUp">Förderung der Bildung in ganz Deutschland durch kollaborativen Vermögensaufbau und transparente Fondsverwaltung.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
 
 
@@ -150,15 +149,11 @@
 			<div class="col-md-7">
 				<div class="block">
 					<div class="section-title">
-						<h2>About Us</h2>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
-							blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+						<h2>Unsere Mission</h2>
+						<p>Die Deutsche Bildungsstiftung widmet sich der finanziellen Unterstützung von Schulen in ganz Deutschland. Durch unser innovatives System virtueller Konten und unseren kollaborativen Ansatz zum Vermögensaufbau streben wir danach, einen dauerhaften positiven Einfluss auf die Bildung zu nehmen.
+
+						</p>
 					</div>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-						dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-						ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-						nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-						anim id </p>
 				</div>
 			</div><!-- .col-md-7 close -->
 			<div class="col-md-5">
@@ -170,25 +165,25 @@
 	</div>
 </section>
 
-<section class="feature bg-2">
-  <div class="container">
-    <div class="row justify-content-end">
-      <div class="col-md-6">
-        <h2 class="section-subtitle">WE BELIEVE IN GREAT IDEAS</h2>
-        <p>Maecenas faucibus mollis interdum. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Fusce
-          dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
-        </p>
-        <p>Maecenas faucibus mollis interdum. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Fusce
-          dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
-        </p>
-        <p>Maecenas faucibus mollis interdum. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Fusce
-          dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
-        </p>
-        <a href="portfolio.html" class="btn btn-view-works">View Works</a>
-      </div>
-    </div>
-  </div>
+
+<section class="call-to-action bg-1 section-sm overly">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+				<div class="block">
+					<h2 class="mb-3">Machen Sie heute einen Unterschied</h2>
+					<p>Ihr Beitrag kann helfen, die Zukunft der Bildung in Deutschland zu gestalten.
+
+					</p>
+					<a class="btn btn-main btn-solid-border" href="contact.html">Jetzt Spenden</a>
+				</div>
+			</div>
+		</div>
+	</div>
 </section>
+
+
+
 
 <!-- Service Start -->
 <section class="service">
@@ -196,67 +191,30 @@
     <div class="row">
       <div class="col-12 text-center">
         <div class="section-title">
-          <h2>Our Services</h2>
-          <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, <br> there live the
-            blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+          <h2>Hauptmerkmale</h2>
         </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-3 col-md-4 col-sm-6">
+      <div class="col-lg-4 col-md-4 col-sm-6">
         <div class="service-item">
           <i class="icon ion-coffee"></i>
-          <h4>Branding</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt </p>
+          <h4>Virtuelle Konten</h4>
+          <p>Jede Schule in Deutschland hat ein eigenes virtuelles Konto zur Verwaltung ihrer zugewiesenen Stiftungsvermögen.</p>
         </div>
       </div>
-      <div class="col-lg-3 col-md-4 col-sm-6">
+      <div class="col-lg-4 col-md-4 col-sm-6">
         <div class="service-item">
           <i class="ion-compass"></i>
-          <h4>Web Design</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt </p>
+          <h4>Finanzielle Transparenz</h4>
+          <p>Wir bieten detaillierte Informationen über den aktuellen Kontostand jeder Schule und die Herkunft ihrer Mittel.</p>
         </div>
       </div>
-      <div class="col-lg-3 col-md-4 col-sm-6">
+      <div class="col-lg-4 col-md-4 col-sm-6">
         <div class="service-item">
           <i class="ion-image"></i>
-          <h4>App Design</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt </p>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-4 col-sm-6">
-        <div class="service-item">
-          <i class="ion-bug"></i>
-          <h4>Start Up</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt </p>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-4 col-sm-6">
-        <div class="service-item">
-          <i class="ion-headphone"></i>
-          <h4>Logo Design</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt </p>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-4 col-sm-6">
-        <div class="service-item">
-          <i class="ion-leaf"></i>
-          <h4>Development</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt </p>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-4 col-sm-6">
-        <div class="service-item">
-          <i class="ion-planet"></i>
-          <h4>Brand Identity</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt </p>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-4 col-sm-6">
-        <div class="service-item">
-          <i class="ion-earth"></i>
-          <h4>Brand Identity</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt </p>
+          <h4>Kollaborativer Vermögensaufbau</h4>
+          <p>Unser gemeinsames Konto hilft, Startkapital für neu hinzukommende Schulen bereitzustellen und gewährleistet eine bedeutende finanzielle Unterstützung.</p>
         </div>
       </div>
     </div>
@@ -264,20 +222,7 @@
 </section>
 <!-- Call to action Start -->
 
-<section class="call-to-action bg-1 section-sm overly">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12">
-				<div class="block">
-					<h2 class="mb-3">We design delightful digital experiences.</h2>
-					<p>Read more about what we do and our philosophy of design. Judge for yourself The work and results <br> we’ve
-						achieved for other clients, and meet our highly experienced Team who just love to design.</p>
-					<a class="btn btn-main btn-solid-border" href="contact.html">Tell Us Your Story</a>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
+
 
 <!-- Content Start -->
 <section class="testimonial">
@@ -425,4 +370,3 @@
     </body>
 
     </html>
-   
