--- a/theme/service.html
+++ b/theme/service.html
@@ -53,7 +53,7 @@
 			<div class="col-lg-12">
 				<nav class="navbar navbar-expand-lg p-0">
 					<a class="navbar-brand" href="index.html">
-						<img src="images/logo.png" alt="Logo">
+						<img src="images/dbs-logo.png" alt="Logo">
 					</a>
 
 					<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarsExample09" aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
@@ -123,6 +123,7 @@
 		</div>
 	</div>
 </header><!-- header close -->
+
 
 <section class="page-title bg-2">
   <div class="container">
@@ -234,15 +235,17 @@
 		<div class="row">
 			<div class="col-md-12">
 				<div class="block">
-					<h2 class="mb-3">We design delightful digital experiences.</h2>
-					<p>Read more about what we do and our philosophy of design. Judge for yourself The work and results <br> we’ve
-						achieved for other clients, and meet our highly experienced Team who just love to design.</p>
-					<a class="btn btn-main btn-solid-border" href="contact.html">Tell Us Your Story</a>
+					<h2 class="mb-3">Machen Sie heute einen Unterschied</h2>
+					<p>Ihr Beitrag kann helfen, die Zukunft der Bildung in Deutschland zu gestalten.
+
+					</p>
+					<a class="btn btn-main btn-solid-border" href="contact.html">Jetzt Spenden</a>
 				</div>
 			</div>
 		</div>
 	</div>
 </section>
+
 
 <!-- footer Start -->
 <footer class="footer">
