--- a/source/service.html
+++ b/source/service.html
@@ -12,25 +12,15 @@
 		<div class="row align-items-center text-center text-lg-left">
 			<div class="col-lg-6">
 				<h2>Unser Zweck</h2>
-				<p class="mt-30">Die Deutsche Bildungsstiftung wurde mit dem Ziel gegründet, die Bildung in ganz Deutschland zu fördern. Wir glauben an die Kraft des kollaborativen Vermögensaufbaus und der transparenten Fondsverwaltung, um einen dauerhaften positiven Einfluss auf Bildungseinrichtungen für Kinder und Jgendliche im ganzen Land zu erzielen.
-
-				</p>
-			</div>
-			<div class="col-lg-6">
-				<img class="img-fluid" src="images/company/company-group-pic.jpg">
-			</div>
-		</div>
-	</div>
-</section>
-
-<section class="service-about section">
-	<div class="container">
-		<div class="row align-items-center text-center text-lg-left">
-			<div class="col-lg-6">
-				<h2>Unser Zweck</h2>
-				<p class="mt-30">Die Deutsche Bildungsstiftung wurde mit dem Ziel gegründet, die Bildung in ganz Deutschland zu fördern. Wir glauben an die Kraft des kollaborativen Vermögensaufbaus und der transparenten Fondsverwaltung, um einen dauerhaften positiven Einfluss auf Bildungseinrichtungen für Kinder und Jgendliche im ganzen Land zu erzielen.
-
-				</p>
+				<p class="mt-30">Die Deutsche Bildungsstiftung wurde mit dem Ziel gegründet, die Bildung in ganz Deutschland zu fördern. Wir glauben an die Kraft des kollaborativen Vermögensaufbaus und der transparenten Fondsverwaltung, um einen dauerhaften positiven Einfluss auf Bildungseinrichtungen für Kinder und Jugendliche im ganzen Land zu erzielen.</p>
+				<h3 class="text-white mb-3">Leitprinzipien</h3>
+				<ul>
+					<li>Transparenz in allen finanziellen Vorgängen</li>
+					<li>Chancengleichheit für alle Schulen</li>
+					<li>Kollaborativer Ansatz zum Vermögensaufbau</li>
+					<li>Effiziente und faire Verteilung der Mittel</li>
+					<li>Kontinuierliche Verbesserung und Anpassung an Bildungsbedürfnisse</li>
+				</ul>
 			</div>
 			<div class="col-lg-6">
 				<img class="img-fluid" src="images/company/company-group-pic.jpg">
