--- a/source/coming-soon.html
+++ b/source/coming-soon.html
@@ -18,10 +18,7 @@
 							<li><a href="https://themefisher.com/"><i class="ion-social-instagram"></i></a></li>
 						</ul>
 					</div>
-					<p class="copyright mb-0">Copyright <script>document.write(new Date().getFullYear())</script> &copy; Designed & Developed by <a class="text-white"
-							href="http://www.themefisher.com">Themefisher</a>. All rights reserved.
-						<br> Get More <a class="text-white" href="https://themefisher.com/free-bootstrap-templates/">Free Bootstrap
-							Templates</a>
+					<p class="copyright mb-0">Copyright <script>document.write(new Date().getFullYear())</script> &copy;
 				</div>
 			</div>
 		</div>
