--- a/theme/coming-soon.html
+++ b/theme/coming-soon.html
@@ -13,7 +13,7 @@
   <!-- Basic Page Needs
   ================================================== -->
   <meta charset="utf-8">
-  <title>Airspace | Creative Agency Bootstrap Template</title>
+  <title>Deutsche Bildungsstiftung</title>
 
   <!-- Mobile Specific Metas
   ================================================== -->
@@ -37,7 +37,7 @@
   <link rel="stylesheet" href="plugins/magnific-popup/magnific-popup.css">
   <!-- Slick CSS -->
   <link rel="stylesheet" href="plugins/slick/slick.css">
-  
+
   <!-- Main Stylesheet -->
   <link rel="stylesheet" href="css/style.css">
 
@@ -64,10 +64,7 @@
 							<li><a href="https://themefisher.com/"><i class="ion-social-instagram"></i></a></li>
 						</ul>
 					</div>
-					<p class="copyright mb-0">Copyright <script>document.write(new Date().getFullYear())</script> &copy; Designed & Developed by <a class="text-white"
-							href="http://www.themefisher.com">Themefisher</a>. All rights reserved.
-						<br> Get More <a class="text-white" href="https://themefisher.com/free-bootstrap-templates/">Free Bootstrap
-							Templates</a>
+					<p class="copyright mb-0">Copyright <script>document.write(new Date().getFullYear())</script> &copy;
 				</div>
 			</div>
 		</div>
