--- a/theme/imprint.html
+++ b/theme/imprint.html
@@ -13,7 +13,7 @@
   <!-- Basic Page Needs
   ================================================== -->
   <meta charset="utf-8">
-  <title>Airspace | Creative Agency Bootstrap Template</title>
+  <title>Deutsche Bildungsstiftung</title>
 
   <!-- Mobile Specific Metas
   ================================================== -->
@@ -37,7 +37,7 @@
   <link rel="stylesheet" href="plugins/magnific-popup/magnific-popup.css">
   <!-- Slick CSS -->
   <link rel="stylesheet" href="plugins/slick/slick.css">
-  
+
   <!-- Main Stylesheet -->
   <link rel="stylesheet" href="css/style.css">
 
@@ -113,7 +113,7 @@
 <!--									<li><a class="dropdown-item @@comingSoon" href="coming-soon.html">Coming Soon</a></li>-->
 <!--									<li><a class="dropdown-item @@404" href="404.html">404 Page</a></li>-->
 <!--									<li><a class="dropdown-item @@faq" href="faq.html">FAQ</a></li>-->
-<!--									<li><a class="dropdown-item active" href="pricing.html">Pricing Table</a></li>-->
+<!--									<li><a class="dropdown-item active" href="imprint.html">Pricing Table</a></li>-->
 <!--								</ul>-->
 <!--							</li>-->
 							<li class="nav-item @@contact"><a class="nav-link" href="contact.html">Kontakt</a></li>
@@ -125,171 +125,43 @@
 	</div>
 </header><!-- header close -->
 
-
-<section class="page-title bg-2">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="block">
-          <h1>Project Price</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, ex!</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section class="pricing-table section bg-gray">
-	<div class="container">
-		<div class="row">
-			<!-- single pricing table -->
-			<div class="col-lg-4 col-md-6 mt-4 mt-md-0">
-				<div class="pricing-item text-center">
-
-					<!-- plan name & value -->
-					<div class="price-title">
-						<h3>Basic</h3>
-						<strong class="value">$99</strong>
-						<p>Perfect for single freelancers who work by themselves</p>
-					</div>
-					<!-- /plan name & value -->
-
-					<!-- plan description -->
-					<ul>
-						<li><i class="ion-ios-circle-outline"></i> Unlimited agents</li>
-						<li><i class="ion-ios-circle-outline"></i> 10 PSD Design</li>
-						<li><i class="ion-ios-circle-outline"></i> HTML5 Markup</li>
-						<li><i class="ion-ios-circle-outline"></i> Basic SEO</li>
-						<li><i class="ion-ios-circle-outline"></i> Email Marketing</li>
-						<li><i class="ion-ios-circle-outline"></i> 24/7 Tech Support</li>
-					</ul>
-					<!-- /plan description -->
-
-					<!-- Contact Us button -->
-					<a class="btn btn-small" href="contact.html">Contact Us</a>
-					<!-- /Contact Us button -->
-
-				</div>
-			</div>
-			<!-- end single pricing table -->
-
-			<!-- single pricing table -->
-			<div class="col-lg-4 col-md-6 mt-4 mt-md-0">
-				<div class="pricing-item text-center">
-
-					<!-- plan name & value -->
-					<div class="price-title">
-						<h3>Premium</h3>
-						<strong class="value">$199</strong>
-						<p>Suitable for small businesses with up to 5 employees</p>
-					</div>
-					<!-- /plan name & value -->
-
-					<!-- plan description -->
-					<ul>
-						<li><i class="ion-ios-circle-outline"></i> Unlimited agents</li>
-						<li><i class="ion-ios-circle-outline"></i> 20 PSD Design</li>
-						<li><i class="ion-ios-circle-outline"></i> HTML5/CSS3 Markup</li>
-						<li><i class="ion-ios-circle-outline"></i> Advance SEO</li>
-						<li><i class="ion-ios-circle-outline"></i> Email Marketing</li>
-						<li><i class="ion-ios-circle-outline"></i> 24/7 Tech Support</li>
-					</ul>
-					<!-- /plan description -->
-
-					<!-- Contact Us button -->
-					<a class="btn btn-small" href="contact.html">Contact Us</a>
-					<!-- /Contact Us button -->
-
-				</div>
-			</div>
-			<!-- end single pricing table -->
-
-			<!-- single pricing table -->
-			<div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
-				<div class="pricing-item text-center">
-
-					<!-- plan name & value -->
-					<div class="price-title">
-						<h3>Advance</h3>
-						<strong class="value">$299</strong>
-						<p>Great for large businesses with more than 5 employees</p>
-					</div>
-					<!-- /plan name & value -->
-
-					<!-- plan description -->
-					<ul>
-						<li><i class="ion-ios-circle-outline"></i> Unlimited agents</li>
-						<li><i class="ion-ios-circle-outline"></i> 100 PSD Design</li>
-						<li><i class="ion-ios-circle-outline"></i> HTML5 Markup</li>
-						<li><i class="ion-ios-circle-outline"></i> Pro SEO</li>
-						<li><i class="ion-ios-circle-outline"></i> Email Marketing</li>
-						<li><i class="ion-ios-circle-outline"></i> 24/7 Tech Support</li>
-					</ul>
-					<!-- /plan description -->
-
-					<!-- Contact Us button -->
-					<a class="btn btn-small" href="contact.html">Contact Us</a>
-					<!-- /Contact Us button -->
-
-				</div>
-			</div>
-			<!-- end single pricing table -->
-
-
-		</div> <!-- End row -->
-	</div> <!-- End container -->
-</section> <!-- End section -->
 <section class="faq section-sm ">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12 mb-3">
-				<h2>Here is some FAQ</h2>
-				<p>for more please visit our <a href="contact.html">Contact Page</a></p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-6 mt-4">
-				<h4>Do I need to pay for upfront?</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem sed dolor laboriosam laborum expedita quisquam,
-					perferendis esselaboriosam laborum illoadipisicing inventore voluptatibus.</p>
-			</div>
-			<div class="col-md-6 mt-4">
-				<h4>Are volume discounts available?</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem sed dolor laboriosam laborum expedita quisquam,
-					perferendis esse illo inventore voluptatibus.</p>
-			</div>
-			<div class="col-md-6 mt-4">
-				<h4>What level of support is included in my plan?</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem sed dolor laboriosam laborum expedita quisquam,
-					perferendis esse illo inventore voluptatibus.</p>
-			</div>
-			<div class="col-md-6 mt-4">
-				<h4>Do I need to pay more for chat?</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem sed dolor laboriosam laborum expedita quisquam,
-					perferendis esse illo inventore voluptatibus.</p>
-			</div>
-			<div class="col-md-6 mt-4">
-				<h4>What does basic SEO Pack means ?</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem sed dolor laboriosam laborum expedita quisquam,
-					perferendis esse illo inventore voluptatibus.</p>
-			</div>
-			<div class="col-md-6 mt-4">
-				<h4>How do refunds work ?</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem sed dolor laboriosam laborum expedita quisquam,
-					perferendis esse illo inventore voluptatibus.</p>
-			</div>
-			<div class="col-md-6 mt-4">
-				<h4>Do you support non-profits ?</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem sed dolor laboriosam laborum expedita quisquam,
-					perferendis esse illo inventore voluptatibus.</p>
-			</div>
-			<div class="col-md-6 mt-4">
-				<h4>Are volume discounts available?</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem sed dolor laboriosam laborum expedita quisquam,
-					perferendis esse illo inventore voluptatibus.</p>
-			</div>
-		</div>
-	</div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 mb-3">
+                <h2>Impressum</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6 mt-4">
+                <h4>Verantwortlich für den Inhalt dieser Website</h4>
+                <p>Gertrud und Hellmut Barthel Stiftung
+                   <br/> Dangaster Straße 38
+                    <br/>26316 Varel</p>
+            </div>
+            <div class="col-md-6 mt-4">
+                <h4>Anschrift</h4>
+                <p>Deutsche Bildungsstiftung<br/>
+                    Wo auch immer 42<br/>11341 Stadt</p>
+            </div>
+            <div class="col-md-6 mt-4">
+                <p>Tel: +49 4451/803470
+                    <br/>info@dbs.org
+                    <br/>https://www.deutsche-bildungsstiftung.de</p>
+            </div>
+            <div class="col-md-6 mt-4">
+                <p>Die Deutsche Bildungsstiftung wird durch ihren Stiftungsleitung vertreten:
+                    Heinz Kunzt, Vorsitzender Stiftungsleitung</p>
+            </div>
+            <div class="col-md-6 mt-4">
+                <h4>Zuständige Aufsichtsbehörde</h4>
+                <p>Amt für regionale Landesentwicklung Weser-Ems
+                   <br/> Theodor-Tantzen-Platz 8
+                    <br/>26106 Oldenburg
+                    <br/>Telefon (0441) 799–0</p>
+            </div>
+        </div>
+    </div>
 </section>
 
 <!-- footer Start -->
@@ -299,17 +171,12 @@
 			<div class="col-md-12">
 				<div class="footer-manu">
 					<ul>
-						<li><a href="about.html">About Us</a></li>
-						<li><a href="contact.html">Contact us</a></li>
-						<li><a href="service.html">How it works</a></li>
-						<li><a href="faq.html">FAQ</a></li>
-						<li><a href="pricing.html">Pricing</a></li>
+						<li><a href="about.html">Über uns</a></li>
+						<li><a href="contact.html">Kontakt</a></li>
+						<li><a href="imprint.html">Impressum</a></li>
 					</ul>
 				</div>
-				<p class="copyright mb-0">Copyright <script>document.write(new Date().getFullYear())</script> &copy; Designed & Developed by <a
-						href="http://www.themefisher.com">Themefisher</a>. All rights reserved.
-					<br> Get More <a href="https://themefisher.com/free-bootstrap-templates/">Free Bootstrap
-						Templates</a>
+				<p class="copyright mb-0">Copyright <script>document.write(new Date().getFullYear())</script> &copy;
 				</p>
 			</div>
 		</div>
@@ -320,6 +187,7 @@
 <div id="scroll-to-top" class="scroll-to-top">
 	<span class="icon ion-ios-arrow-up"></span>
 </div>
+
 
     <!-- 
     Essential Scripts
