--- a/theme/index.html
+++ b/theme/index.html
@@ -13,7 +13,7 @@
   <!-- Basic Page Needs
   ================================================== -->
   <meta charset="utf-8">
-  <title>Airspace | Creative Agency Bootstrap Template</title>
+  <title>Deutsche Bildungsstiftung</title>
 
   <!-- Mobile Specific Metas
   ================================================== -->
@@ -37,7 +37,7 @@
   <link rel="stylesheet" href="plugins/magnific-popup/magnific-popup.css">
   <!-- Slick CSS -->
   <link rel="stylesheet" href="plugins/slick/slick.css">
-  
+
   <!-- Main Stylesheet -->
   <link rel="stylesheet" href="css/style.css">
 
@@ -113,7 +113,7 @@
 <!--									<li><a class="dropdown-item @@comingSoon" href="coming-soon.html">Coming Soon</a></li>-->
 <!--									<li><a class="dropdown-item @@404" href="404.html">404 Page</a></li>-->
 <!--									<li><a class="dropdown-item @@faq" href="faq.html">FAQ</a></li>-->
-<!--									<li><a class="dropdown-item @@pricing" href="pricing.html">Pricing Table</a></li>-->
+<!--									<li><a class="dropdown-item @@pricing" href="imprint.html">Pricing Table</a></li>-->
 <!--								</ul>-->
 <!--							</li>-->
 							<li class="nav-item @@contact"><a class="nav-link" href="contact.html">Kontakt</a></li>
@@ -199,23 +199,23 @@
     <div class="row">
       <div class="col-lg-4 col-md-4 col-sm-6">
         <div class="service-item">
-          <i class="icon ion-coffee"></i>
+          <i class="icon ion-cash"></i>
           <h4>Virtuelle Konten</h4>
-          <p>Jede Schule in Deutschland hat ein eigenes virtuelles Konto zur Verwaltung ihrer zugewiesenen Stiftungsvermögen.</p>
+          <p>Jede Kita, Schule oder Tageseltern in Deutschland haben ein eigenes, virtuelles Konto zur Verwaltung ihrer zugewiesenen Stiftungsvermögen.</p>
         </div>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-6">
         <div class="service-item">
-          <i class="ion-compass"></i>
+          <i class="ion-eye"></i>
           <h4>Finanzielle Transparenz</h4>
-          <p>Wir bieten detaillierte Informationen über den aktuellen Kontostand jeder Schule und die Herkunft ihrer Mittel.</p>
+          <p>Wir bieten detaillierte Informationen über den aktuellen Kontostand jeder Bildungseinrichtung und die Herkunft ihrer Mittel.</p>
         </div>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-6">
         <div class="service-item">
-          <i class="ion-image"></i>
+          <i class="ion-android-people"></i>
           <h4>Kollaborativer Vermögensaufbau</h4>
-          <p>Unser gemeinsames Konto hilft, Startkapital für neu hinzukommende Schulen bereitzustellen und gewährleistet eine bedeutende finanzielle Unterstützung.</p>
+          <p>Unser gemeinsames Konto hilft, Startkapital für neu hinzukommende Bildungseinrichtungen bereitzustellen und gewährleistet eine bedeutende finanzielle Unterstützung.</p>
         </div>
       </div>
     </div>
@@ -236,82 +236,31 @@
         </div>
       </div>
     </div>
-    <div class="row align-items-center">
-      <div class="col-md-6">
-        <div class="block">
-          <ul class="counter-box clearfix">
+    <div class="row">
+        <div class="col-12">
+          <ul class="counter-box ">
             <li>
               <div class="counter-item">
-                <i class="ion-ios-chatboxes-outline"></i>
-                <h4 class="count" data-count="99">0</h4>
-                <span>Cups Of Coffee</span>
-              </div>
-            </li>
-            <li>
-              <div class="counter-item">
-                <i class="ion-ios-glasses-outline"></i>
+                <i class="ion-ios-paper"></i>
                 <h4 class="count" data-count="45">0</h4>
-                <span>Article Written</span>
+                <span>Registrierte Einrichtungen</span>
               </div>
             </li>
             <li>
               <div class="counter-item">
-                <i class="ion-ios-compose-outline"></i>
+                <i class="ion-social-euro-outline"></i>
+                <h4 class="count" data-count="99">0</h4>
+                <span>Ausschüttungen</span>
+              </div>
+            </li>
+            <li>
+              <div class="counter-item">
+                <i class="ion-cash  "></i>
                 <h4 class="count" data-count="125">0</h4>
-                <span>Projects Completed</span>
-              </div>
-            </li>
-            <li>
-              <div class="counter-item">
-                <i class="ion-ios-timer-outline"></i>
-                <h4 class="count" data-count="200">0</h4>
-                <span>Combined Projects</span>
+                <span>Spenden</span>
               </div>
             </li>
           </ul>
-        </div>
-      </div>
-      <div class="col-md-5 col-md-offset-1">
-        <div class="testimonial-carousel text-center">
-          <div class="testimonial-slider owl-carousel">
-            <div>
-              <i class="ion-quote"></i>
-              <p>"This Company created an e-commerce site with the tools to make our business a success, with innovative
-                ideas we feel that our site has unique elements that make us stand out from the crowd."</p>
-              <div class="user">
-                <img src="images/item-img1.jpg" alt="Pepole">
-                <p><span>Rose Ray</span> CEO-Themefisher</p>
-              </div>
-            </div>
-            <div>
-              <i class="ion-quote"></i>
-              <p>"This Company created an e-commerce site with the tools to make our business a success, with innovative
-                ideas we feel that our site has unique elements that make us stand out from the crowd."</p>
-              <div class="user">
-                <img src="images/item-img1.jpg" alt="Pepole">
-                <p><span>Rose Ray</span> CEO-Themefisher</p>
-              </div>
-            </div>
-            <div>
-              <i class="ion-quote"></i>
-              <p>"This Company created an e-commerce site with the tools to make our business a success, with innovative
-                ideas we feel that our site has unique elements that make us stand out from the crowd."</p>
-              <div class="user">
-                <img src="images/item-img1.jpg" alt="Pepole">
-                <p><span>Rose Ray</span> CEO-Themefisher</p>
-              </div>
-            </div>
-            <div>
-              <i class="ion-quote"></i>
-              <p>"This Company created an e-commerce site with the tools to make our business a success, with innovative
-                ideas we feel that our site has unique elements that make us stand out from the crowd."</p>
-              <div class="user">
-                <img src="images/item-img1.jpg" alt="Pepole">
-                <p><span>Rose Ray</span> CEO-Themefisher</p>
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
     </div>
   </div>
@@ -325,17 +274,12 @@
 			<div class="col-md-12">
 				<div class="footer-manu">
 					<ul>
-						<li><a href="about.html">About Us</a></li>
-						<li><a href="contact.html">Contact us</a></li>
-						<li><a href="service.html">How it works</a></li>
-						<li><a href="faq.html">FAQ</a></li>
-						<li><a href="pricing.html">Pricing</a></li>
+						<li><a href="about.html">Über uns</a></li>
+						<li><a href="contact.html">Kontakt</a></li>
+						<li><a href="imprint.html">Impressum</a></li>
 					</ul>
 				</div>
-				<p class="copyright mb-0">Copyright <script>document.write(new Date().getFullYear())</script> &copy; Designed & Developed by <a
-						href="http://www.themefisher.com">Themefisher</a>. All rights reserved.
-					<br> Get More <a href="https://themefisher.com/free-bootstrap-templates/">Free Bootstrap
-						Templates</a>
+				<p class="copyright mb-0">Copyright <script>document.write(new Date().getFullYear())</script> &copy;
 				</p>
 			</div>
 		</div>
@@ -346,6 +290,7 @@
 <div id="scroll-to-top" class="scroll-to-top">
 	<span class="icon ion-ios-arrow-up"></span>
 </div>
+
 
     <!-- 
     Essential Scripts
