--- a/theme/service.html
+++ b/theme/service.html
@@ -13,7 +13,7 @@
   <!-- Basic Page Needs
   ================================================== -->
   <meta charset="utf-8">
-  <title>Airspace | Creative Agency Bootstrap Template</title>
+  <title>Deutsche Bildungsstiftung</title>
 
   <!-- Mobile Specific Metas
   ================================================== -->
@@ -37,7 +37,7 @@
   <link rel="stylesheet" href="plugins/magnific-popup/magnific-popup.css">
   <!-- Slick CSS -->
   <link rel="stylesheet" href="plugins/slick/slick.css">
-  
+
   <!-- Main Stylesheet -->
   <link rel="stylesheet" href="css/style.css">
 
@@ -113,7 +113,7 @@
 <!--									<li><a class="dropdown-item @@comingSoon" href="coming-soon.html">Coming Soon</a></li>-->
 <!--									<li><a class="dropdown-item @@404" href="404.html">404 Page</a></li>-->
 <!--									<li><a class="dropdown-item @@faq" href="faq.html">FAQ</a></li>-->
-<!--									<li><a class="dropdown-item @@pricing" href="pricing.html">Pricing Table</a></li>-->
+<!--									<li><a class="dropdown-item @@pricing" href="imprint.html">Pricing Table</a></li>-->
 <!--								</ul>-->
 <!--							</li>-->
 							<li class="nav-item @@contact"><a class="nav-link" href="contact.html">Kontakt</a></li>
@@ -144,25 +144,15 @@
 		<div class="row align-items-center text-center text-lg-left">
 			<div class="col-lg-6">
 				<h2>Unser Zweck</h2>
-				<p class="mt-30">Die Deutsche Bildungsstiftung wurde mit dem Ziel gegründet, die Bildung in ganz Deutschland zu fördern. Wir glauben an die Kraft des kollaborativen Vermögensaufbaus und der transparenten Fondsverwaltung, um einen dauerhaften positiven Einfluss auf Bildungseinrichtungen für Kinder und Jgendliche im ganzen Land zu erzielen.
-
-				</p>
-			</div>
-			<div class="col-lg-6">
-				<img class="img-fluid" src="images/company/company-group-pic.jpg">
-			</div>
-		</div>
-	</div>
-</section>
-
-<section class="service-about section">
-	<div class="container">
-		<div class="row align-items-center text-center text-lg-left">
-			<div class="col-lg-6">
-				<h2>Unser Zweck</h2>
-				<p class="mt-30">Die Deutsche Bildungsstiftung wurde mit dem Ziel gegründet, die Bildung in ganz Deutschland zu fördern. Wir glauben an die Kraft des kollaborativen Vermögensaufbaus und der transparenten Fondsverwaltung, um einen dauerhaften positiven Einfluss auf Bildungseinrichtungen für Kinder und Jgendliche im ganzen Land zu erzielen.
-
-				</p>
+				<p class="mt-30">Die Deutsche Bildungsstiftung wurde mit dem Ziel gegründet, die Bildung in ganz Deutschland zu fördern. Wir glauben an die Kraft des kollaborativen Vermögensaufbaus und der transparenten Fondsverwaltung, um einen dauerhaften positiven Einfluss auf Bildungseinrichtungen für Kinder und Jugendliche im ganzen Land zu erzielen.</p>
+				<h3 class="text-white mb-3">Leitprinzipien</h3>
+				<ul>
+					<li>Transparenz in allen finanziellen Vorgängen</li>
+					<li>Chancengleichheit für alle Schulen</li>
+					<li>Kollaborativer Ansatz zum Vermögensaufbau</li>
+					<li>Effiziente und faire Verteilung der Mittel</li>
+					<li>Kontinuierliche Verbesserung und Anpassung an Bildungsbedürfnisse</li>
+				</ul>
 			</div>
 			<div class="col-lg-6">
 				<img class="img-fluid" src="images/company/company-group-pic.jpg">
@@ -284,17 +274,12 @@
 			<div class="col-md-12">
 				<div class="footer-manu">
 					<ul>
-						<li><a href="about.html">About Us</a></li>
-						<li><a href="contact.html">Contact us</a></li>
-						<li><a href="service.html">How it works</a></li>
-						<li><a href="faq.html">FAQ</a></li>
-						<li><a href="pricing.html">Pricing</a></li>
+						<li><a href="about.html">Über uns</a></li>
+						<li><a href="contact.html">Kontakt</a></li>
+						<li><a href="imprint.html">Impressum</a></li>
 					</ul>
 				</div>
-				<p class="copyright mb-0">Copyright <script>document.write(new Date().getFullYear())</script> &copy; Designed & Developed by <a
-						href="http://www.themefisher.com">Themefisher</a>. All rights reserved.
-					<br> Get More <a href="https://themefisher.com/free-bootstrap-templates/">Free Bootstrap
-						Templates</a>
+				<p class="copyright mb-0">Copyright <script>document.write(new Date().getFullYear())</script> &copy;
 				</p>
 			</div>
 		</div>
@@ -305,6 +290,7 @@
 <div id="scroll-to-top" class="scroll-to-top">
 	<span class="icon ion-ios-arrow-up"></span>
 </div>
+
 
     <!-- 
     Essential Scripts
