--- a/source/blog-full-width.html
+++ b/source/blog-full-width.html
@@ -4,7 +4,8 @@
 
 @@include('blocks/page-title.htm', {
   "title": "Blog Full Width",
-  "description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, ex!"
+  "description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, ex!",
+"background": "feature-bg"
 })
 
 
@@ -18,6 +19,6 @@
 	</div>
 </div>
 
-@@include('blocks/footer.htm')
+@@include('blocks/footer-navigation.htm')
 
 @@include('footer.htm')
