--- a/source/blog-grid.html
+++ b/source/blog-grid.html
@@ -4,7 +4,8 @@
 
 @@include('blocks/page-title.htm', {
 "title": "Blogs",
-"description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, quibusdam."
+"description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, quibusdam.",
+"background": "feature-bg"
 })
 
 
@@ -213,6 +214,6 @@
 </div>
 
 
-@@include('blocks/footer.htm')
+@@include('blocks/footer-navigation.htm')
 
 @@include('footer.htm')
