--- a/source/faq.html
+++ b/source/faq.html
@@ -4,7 +4,8 @@
 
 @@include('blocks/page-title.htm', {
 "title": "FAQ",
-"description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia, totam."
+"description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia, totam.",
+"background": "feature-bg"
 })
 
 
@@ -71,6 +72,6 @@
 	</div>
 </section>
 
-@@include('blocks/footer.htm')
+@@include('blocks/footer-navigation.htm')
 
 @@include('footer.htm')
