--- a/source/index.html
+++ b/source/index.html
@@ -2,19 +2,16 @@
 
 @@include('blocks/navigation.htm', {"home":"active"})
 
-@@include('blocks/slider.htm')
+@@include('blocks/landing-slider.htm')
 
-@@include('blocks/about.htm')
+@@include('blocks/mission.htm')
 
 @@include('blocks/call-to-action.htm')
 
-<!--@@include('blocks/feature.htm')-->
+@@include('blocks/hauptmerkmale.htm')
 
-@@include('blocks/service.htm')
+@@include('blocks/zahlen-und-fakten.htm')
 
-
-@@include('blocks/testimonial.htm')
-
-@@include('blocks/footer.htm')
+@@include('blocks/footer-navigation.htm')
 
 @@include('footer.htm')
