--- a/source/portfolio.html
+++ b/source/portfolio.html
@@ -4,7 +4,8 @@
 
 @@include('blocks/page-title.htm', {
 "title": "Some of our latest projects.",
-"description": "Don’t just take our word for it. Check out some of our latest work."
+"description": "Don’t just take our word for it. Check out some of our latest work.",
+"background": "feature-bg"
 })
 
 <!-- Portfolio Start -->
@@ -98,5 +99,5 @@
 </section>
 <!-- Portfolio End -->
 
-@@include('blocks/footer.htm')
+@@include('blocks/footer-navigation.htm')
 @@include('footer.htm')
