--- a/source/blog-right-sidebar.html
+++ b/source/blog-right-sidebar.html
@@ -4,7 +4,8 @@
 
 @@include('blocks/page-title.htm', {
 "title": "Blog Right Sidebar",
-"description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, quibusdam."
+"description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, quibusdam.",
+"background": "feature-bg"
 })
 
 <div class="page-wrapper">
@@ -22,6 +23,6 @@
 	</div>
 </div>
 
-@@include('blocks/footer.htm')
+@@include('blocks/footer-navigation.htm')
 
 @@include('footer.htm')
