--- a/source/blog-single.html
+++ b/source/blog-single.html
@@ -4,7 +4,8 @@
 
 @@include('blocks/page-title.htm', {
 "title": "Blog Destils",
-"description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, quibusdam."
+"description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, quibusdam.",
+"background": "feature-bg"
 })
 
 <section class="page-wrapper">
@@ -48,7 +49,7 @@
 							nihil iste, magnam officia nemo praesentium autem, libero vel officiis. Omnis pariatur nam voluptatem voluptate
 							at officia repellat ea beatae eligendi? Mollitia error saepe, aperiam facere. Optio maiores deleniti veritatis
 							eaque commodi atque aperiam, debitis iste alias eligendi ut facilis earum! Impedit, tempore.</p>
-							
+
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex error esse a dolore, architecto sapiente, aliquid
 							commodi, laudantium eius nemo enim. Enim, fugit voluptatem rem molestiae. Sed totam quis accusantium iste
 							nesciunt id exercitationem cumque repudiandae voluptas perspiciatis, consequatur quasi, molestias, culpa odio
@@ -202,6 +203,6 @@
 	</div>
 </section>
 
-@@include('blocks/footer.htm')
+@@include('blocks/footer-navigation.htm')
 
 @@include('footer.htm')
