fix mobile issues after upgrade to bs5

--- a/source/impressum.html
+++ b/source/impressum.html
@@ -11,14 +11,12 @@
         <div class="row">
             <div class="col-md-6 mt-4">
                 <h4>Verantwortlich für den Inhalt dieser Website</h4>
-                <p>Gertrud und Hellmut Barthel Stiftung
-                   <br/> Dangaster Straße 38
-                    <br/>26316 Varel</p>
+                <p>Stiftungsrat Deutsche Bildungsstiftung</p>
             </div>
             <div class="col-md-6 mt-4">
                 <h4>Anschrift</h4>
                 <p>Deutsche Bildungsstiftung<br/>
-                    Wo auch immer 42<br/>11341 Stadt</p>
+                    Straße 34<br/>26106 Oldenburg</p>
             </div>
             <div class="col-md-6 mt-4">
                 <p>Tel: +49 4451/803470
